--- a/prontocloud/index.html
+++ b/prontocloud/index.html
@@ -85,7 +85,7 @@
 
                     <article id="tenho-iteresse ">
                         <h1 class="centr">Ficou interessado?</h1>
-                        <p class="centr" >preencha os campos abaixo para receber mais  informações sobre nossos produtos e  serviços </p>
+                        <p class="centr" >Preencha os campos abaixo para receber mais  informações sobre nossos produtos e  serviços </p>
 
                         <div class="cognito">
 
