ajuste de layout

--- a/prontocloud/index.html
+++ b/prontocloud/index.html
@@ -83,9 +83,11 @@
 
                     <p>Se quiser pode compartilhar seu resultado com a gente. No próximo post vamos continuar com o nosso guia de criação de sites , falando sobre os aspectos técnicos do desenvolvimento do seu site.</p>
 
-                    <article id="tenho-iteresse ">
-                        <h1 class="centr">Ficou interessado?</h1>
-                        <p class="centr" >Preencha os campos abaixo para receber mais  informações sobre nossos produtos e  serviços </p>
+                    
+                        <article id="tenho-interesse ">
+                            <h1 class="centr">Ficou interessado?</h1>
+                            <p class="centr" >Preencha os campos abaixo para receber mais  informações sobre nossos produtos e  serviços </p>
+                    
 
                         <div class="cognito">
 
