--- a/prontocloud/newsletter.html
+++ b/prontocloud/newsletter.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
    
         <title>ProntoCloud - Newsletter</title>
     </head>
@@ -44,7 +45,7 @@
             <tr>
             
                 <td colspan="3" >
-                    <a style="background-color: #385874; color: #fff; display: block; padding: 10px 16px; margin: 0 auto; font-size: 20px; width:300px; height: 40px; border-radius: 10px;text-align: center; text-decoration: none; margin-bottom: 10px;" href="#">Conheça nossas soluções</a>
+                    <a style="background-color: #385874; color: #fff; display: block; padding: 10px 16px; margin: 0 auto; font-size: 20px; width:300px; height: 40px; border-radius: 10px;text-align: center; text-decoration: none; margin-bottom: 10px;" href="#" >Conheça nossas soluções</a>
                 </td>
           
             </tr>
